--- a/public/styles/Profile.scss
+++ b/public/styles/Profile.scss
@@ -400,6 +400,7 @@
     }
 
     .expanded-view img {
+        width: 100%;
         max-width: 600px;
         position: relative;
         z-index: 3;
